--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceFolder}\\src\\test\\nodetest.js"
+        },
+        {
             "name": "Tests",
             "type": "node",
             "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
